# rcrdp

./: .env.example  .gitignore  CMakeLists.txt  MOUSE_FLAGS_REFERENCE.md  Makefile  README.md
include/: http_server.h  rcrdp.h
src/: commands.c  http_routes.c  http_server.c  main.c  rdp_client.c
tests/: test_connection.c
